--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -44,7 +44,7 @@
 
 @media screen and (max-width: $tablet-width) {
   #site-navbar {
-    padding: 0 0;
+    padding: 0;
     height: 6rem;
   }
 
@@ -58,7 +58,7 @@
   }
 
   .nav-hamburger {
-    margin: 1rem 2rem;
+    margin: 28px 2rem;
   }
 
   .navbar-light .navbar-nav .nav-link {
@@ -75,6 +75,7 @@
   }
 
   .dropdown-item {
+    width: 100%;
     margin: auto;
     text-align: center;
     color: #fff;
