--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -2,7 +2,7 @@
 
 main {
   min-height: 100vh;
-  padding: 12rem 0;
+  padding: 12rem 6rem;
   z-index: 1;
 }
 
@@ -56,8 +56,7 @@ footer {
   position: relative;
   z-index: 1;
   background-color: #0000;
-  padding: 0 15%;
-  bottom: 60px;
+  padding: 0 15% 60px;
 }
 
 //tablet
@@ -77,7 +76,7 @@ footer {
     margin-top: 50%;
 
     .footer-content {
-      padding: 0 1rem;
+      padding: 0 1rem 3rem;
     }
 
     i {
