--- a/src/styles/promo.scss
+++ b/src/styles/promo.scss
@@ -1,6 +1,5 @@
 .promo-entry {
   width: 80%;
-  clear: both;
   margin: 7rem 0;
 
   .promo-entry-image {
